broken softbody. #40909

Closed
opened 2014-07-01 20:52:11 +02:00 by Skylyn Bilén · 17 comments

System Information
windows 7 professional 64-bit laptop integrated graphics (dell inspiron n5010)

Blender Version
Broken: 2.71 full

Short description of error
the stiffness and shapematch of softbody objects is nonexistent.
scrnshot1.png

scrnshot2.png

Exact steps for others to reproduce the error
enter game engine
create softbody object uv sphere (for better detail)
create collision object
press p
watch the sphere land flat

**System Information** windows 7 professional 64-bit laptop integrated graphics (dell inspiron n5010) **Blender Version** Broken: 2.71 full **Short description of error** the stiffness and shapematch of softbody objects is nonexistent. ![scrnshot1.png](https://archive.blender.org/developer/F96221/scrnshot1.png) ![scrnshot2.png](https://archive.blender.org/developer/F96223/scrnshot2.png) **Exact steps for others to reproduce the error** enter game engine create softbody object uv sphere (for better detail) create collision object press p watch the sphere land flat
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @skyliner_369

Added subscriber: @skyliner_369

#40661 was marked as duplicate of this issue

#40661 was marked as duplicate of this issue
Member

Added subscriber: @brita

Added subscriber: @brita

Added subscribers: @sreich, @Moguri

Added subscribers: @sreich, @Moguri

Has this always been a problem, or is it a regression? In other words, was there an earlier version of Blender where this feature worked as you expected it too?

@sreich I don't know much about the physics. Is this feature being used correctly? If it is, is this a limitation of Bullet, or is it something we can possibly fix?

Has this always been a problem, or is it a regression? In other words, was there an earlier version of Blender where this feature worked as you expected it too? @sreich I don't know much about the physics. Is this feature being used correctly? If it is, is this a limitation of Bullet, or is it something we can possibly fix?

This is a regression, it's been broken somewhere after 2.70.
My guess would be that the way softbodies are constructed by blender has changed.

This is a regression, it's been broken somewhere after 2.70. My guess would be that the way softbodies are constructed by blender has changed.

Looking further into it, culprit seems to be df1a199, settings in blenderobject->bsoft are now completely ignored.
Here is a quick patch: bge_soft_construction_fix.diff

Looking further into it, culprit seems to be df1a199, settings in blenderobject->bsoft are now completely ignored. Here is a quick patch: [bge_soft_construction_fix.diff](https://archive.blender.org/developer/F97202/bge_soft_construction_fix.diff)

This issue was referenced by 3a9e588d1a

This issue was referenced by 3a9e588d1a4e5ec4a9d2acd2d9f244c24a38c64f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3a9e588d1a.

Closed by commit 3a9e588d1a.

Thanks for the lead @sreich! It looks like the code to copy these settings got lost in a recent cleanup. It makes me wonder if anything else got lost...

Thanks for the lead @sreich! It looks like the code to copy these settings got lost in a recent cleanup. It makes me wonder if anything else got lost...

Added subscribers: @HugoBarreira, @kupoman

Added subscribers: @HugoBarreira, @kupoman

◀ Merged tasks: #40661.

◀ Merged tasks: #40661.

This issue was referenced by 67fdb2c0a63f441ba60e6474a4eaab0b3a9f3f15

This issue was referenced by 67fdb2c0a63f441ba60e6474a4eaab0b3a9f3f15
Author

i have no clue how to install the diff file here.

i have no clue how to install the diff file here.
Member

@skyliner_369 to use a diff/patch you need to compile your own version of blender
However, in this case that should not be needed as moguri applied and committed the patch for everyone. You simply need to download a daily build that already has this change: https://builder.blender.org/download/

@skyliner_369 to use a diff/patch you need to compile your own version of blender However, in this case that should not be needed as moguri applied and committed the patch for everyone. You simply need to download a daily build that already has this change: https://builder.blender.org/download/
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40909
No description provided.