Fix T40909: BGE softbodies broken.

Looks like softbody settings got lost in a recent cleanup.